force-app/main/default/objects/Equipment_Assignment__c/Equipment_Assignment__c.object-meta.xml
<CustomObject>
    <label>Equipment Assignment</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Equipment Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>