force-app/main/default/objects/Equipment_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Assignment</relationshipLabel>
    <relationshipName>Equipment_Assignment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>