force-app/main/default/objects/Equipment_Assignment__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Equipment Assignment</relationshipLabel>
    <relationshipName>Equipment_Assignment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>