force-app/main/default/objects/Equipment_Assignment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Equipment Assignment</relationshipLabel>
    <relationshipName>Equipment_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>