force-app/main/default/objects/Equipment_Assignment__c/fields/Replaced_Asset__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Equipment Assignment (Replaced Asset)</relationshipLabel>
    <relationshipName>Equipment_Assignment1</relationshipName>
    <type>Lookup</type>
</CustomField>