force-app/main/default/objects/Equipment_Assignment__c/fields/Temporary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Reason__c</fullName>
    <label>Temporary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance Replacement</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Temporary Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>