force-app/main/default/objects/Equipment_Assignment__c/validationRules/Closure_Reason_Required_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closure_Reason_Required_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Date__c)),
    ISBLANK(TEXT(Closure_Reason__c))
)</errorConditionFormula>
    <errorMessage>Closure Reason is required when an Equipment Assignment is closed.</errorMessage>
</ValidationRule>