force-app/main/default/objects/Equipment_Assignment__c/validationRules/Expected_Return_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Return_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Expected_Return_Date__c)),
    Expected_Return_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Expected_Return_Date__c</errorDisplayField>
    <errorMessage>Expected Return Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>