force-app/main/default/objects/Equipment_Assignment__c/validationRules/Replacement_Asset_Cannot_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Replacement_Asset_Cannot_Be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Replaced_Asset__c)),
    Replaced_Asset__c = Asset__c
)</errorConditionFormula>
    <errorMessage>Replaced Asset cannot be the same as the assigned Asset.</errorMessage>
</ValidationRule>