force-app/main/default/objects/Equipment_Assignment__c/validationRules/Replacement_Asset_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Replacement_Asset_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Temporary_Reason__c, &quot;Maintenance Replacement&quot;),
    ISBLANK(Replaced_Asset__c)
)</errorConditionFormula>
    <errorDisplayField>Replaced_Asset__c</errorDisplayField>
    <errorMessage>Replaced Asset is required for Maintenance Replacement assignments.</errorMessage>
</ValidationRule>