force-app/main/default/objects/Equipment_Assignment__c/validationRules/Temporary_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Temporary_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Assignment_Type__c, &quot;Temporary&quot;),
    ISBLANK(TEXT(Temporary_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Temporary_Reason__c</errorDisplayField>
    <errorMessage>Temporary Reason is required when Assignment Type is Temporary.</errorMessage>
</ValidationRule>